# petals_test

./: Cryptocurrency rewards  README.md  pyproject.toml
src/petals/: crypto_rewards.py
