[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
required-version = "22.3.0"

[tool.isort]
profile = "black"
line-length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]
known_first_party = ["test_utils"]

[build-system.build_crypto_rewards]
requires = ["cryptography"]
build-py = "build_crypto_rewards.build_py:build_crypto_rewards"

[tool.pytest]
addopts = "-rA"
